# null-talk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux-arm-test.yml  release.yml
client/: Cargo.toml  README.md  chat.toml  gp.toml  mkgp.toml  server.toml  server2.toml  user1.toml  user2.toml
client/src/: cmd.rs  data.rs  lib.rs  main.rs
client/src/handlers/: client.rs  cmd.rs  connection.rs  group.rs  mod.rs  task.rs
client/src/types/: app.rs  channel.rs  config.rs  log.rs  mod.rs  session.rs
client/src/ui/: events.rs  main_pan.rs  mod.rs  side_pan.rs  terminal.rs
client/src/utils/: app.rs  config.rs  file.rs  mod.rs  net.rs
common/: Cargo.toml
common/src/: lib.rs  net.rs
common/src/types/: enc.rs  mod.rs  payload.rs
common/src/utils/: enc.rs  file.rs  mod.rs  net.rs
server/: Cargo.toml  Config.toml  README.md
server/src/: cmd.rs  config.rs  data.rs  lib.rs  main.rs  net.rs  types.rs
server/src/handlers/: client.rs  cmd.rs  mod.rs  msg.rs  task.rs
server/src/utils/: mod.rs  net.rs
