[package]
name = "null-talk-client"
version = "1.0.0"
edition = "2024"
authors = ["ByteMaster2003 <viveksahani39266@gmail.com>"]
description = "A null-safe client communication library for Rust."


[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
hex.workspace = true
bincode.workspace = true
ssh-key.workspace = true
config.workspace = true
serde = { workspace = true, features = ["derive"] }
rsa = { workspace = true, features = ["serde", "sha2"] }
ratatui = "0.29.0"
color-eyre = "0.6.5"
chrono = "0.4.41"
tui-textarea = "0.7.0"
tokio-rustls.workspace = true
rustls.workspace = true
webpki-roots = "1.0.2"
