[package]
name = "null-talk-server"
version = "1.0.0"
edition = "2024"
authors = ["ByteMaster2003 <viveksahani39266@gmail.com>"]
description = "A null-safe server communication library for Rust."


[dependencies]
bincode.workspace = true
common = { path = "../common" }
config.workspace = true
hex.workspace = true
rsa.workspace = true
rustls = "0.23.31"
rustls-pemfile = "2.2.0"
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = "0.26.2"
uuid = { version = "1.18.0", features = ["v4"] }
